--- a/styles/list-section.css
+++ b/styles/list-section.css
@@ -8,6 +8,8 @@
   margin-bottom: 60px;
   color: black;
   font-size: 45px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .list-section { 
